blue sinfo logo;smaller footer;fixed video center;text align in mission

--- a/Ventcamp_HTML/assets/css/style.css
+++ b/Ventcamp_HTML/assets/css/style.css
@@ -6713,12 +6713,12 @@ section#feedback {
     Footer
 ---------------------------------------------------------------------------- */
 .footer {
-  padding: 50px 0 0;
+  padding: 0 0 0;
   color: #ffffff;
   background-color: #262627;
 }
 .footer-base {
-  padding: 40px 0 30px;
+  padding: 30px 0 30px;
   text-align: left;
 }
 .footer-nav > li {
